--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,11 +1,23 @@
-html,body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
     height:100%;
-    background:white;
+    background:f7f7f7;
+    color: #333;
+}
+html {
+    height:100%;
+    background:f7f7f7;
+    color: #333;
 }
 header {
-    display:block;
-    background:#d7e0e9;
-    padding:10px 0px;
+    background: #4CAF50;
+    color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+h1 {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
 section {
     width: 79%;
